Changelog
=========

5.2-dev - (unreleased)
----------------------
* Change: removed protect_email transform
  [ghicaale refs #4926]
* Bug fix: fixed profile version number
  [ghicaale]
* Buf fix: fixed html_eea_chain transform chain
  [ghicaale]
* Upgrade step: under www/portal_setup/manage_upgrades:
   - select "Products.EEAContentTypes:default"
   - click "choose profile"
   - click "show"
   - select both upgrade steps for 4.19 to 5.2
   - click "upgrade"
   - [ghicaale refs #4926]
* Bug fix: fixed EEA organigram for cases when there is no Deputy Director.
  [demarant fixes #5402]
* Bug fix: reference jquery.js in a way that is compatible also with Plone 4.2
  [ichimdav #5398]
* Bug fix: added Topic content type info in profile, to fix tests 
  [tiberich #5346]
* Bug fix: fix googleEarthView logic to use IGeoTagged information instead of 
  IGeoPositioned
  [ichimdav #5386]
* Bug fix: fixed google_earth page template from breaking on soer pages 
  [ichimdav #5386]
* Bug fix: return a number instead of a boolean for the max number in syndication
  in order for search RSS to display more than 1 result
  [ichimdav #5354]

5.1 - (2012-07-13)
------------------
* Feature: re-enabled eea.relations widget for Base Content
  [ichimdav #4705]
* Bug fix: display validation error when translating if error is present
  [ichimdav #5302]
* Bug Fix: Fixed missing i18n attributes, i18n:domain and duplicate keys
  in .pt 
  [prospchr refs #5162]

5.0 - (2012-06-20)
------------------
* Bug fix: fixed rdf dcterms:isReplacedBy (it was set to wrongly to replacedBy)
  [demarant fixes #5129]
* Bug fix: check if results are found for topics on isGeoContainer
  [ichimdav #3355]
* Bug fix: add a validator for max file size in ExternalHighlight and Promotion
  [tiberich refs #5259]
* Bug fix: removed usage of isEmpty
  [tiberich refs #5289]

4.21 - (2012-06-13)
-------------------
* Change: Images on highlights and articles are now wider and span entire